# hve-core

./: .cspell.json  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  SUPPORT.md  package.json
.devcontainer/: README.md  devcontainer.json
.devcontainer/scripts/: post-attach.sh  post-create.sh
.github/: CUSTOM-AGENTS.md
.github/prompts/: pptx.prompt.md
.github/skills/experimental/powerpoint/: SKILL.md  content-extra-py-template.md  content-yaml-template.md  pyproject.toml  style-yaml-template.md
.github/skills/experimental/powerpoint/scripts/: build_deck.py  export_slides.py  extract_content.py  pptx_charts.py  pptx_colors.py  pptx_fills.py  pptx_fonts.py  pptx_shapes.py  pptx_tables.py  pptx_text.py  pptx_utils.py  render_pdf_images.py  validate_deck.py  validate_slides.py
.github/skills/experimental/powerpoint/tests/: Invoke-PptxPipeline.Tests.ps1  conftest.py  test_build_deck.py  test_export_slides.py  test_extract_content.py  test_pptx_charts.py  test_pptx_colors.py  test_pptx_fills.py  test_pptx_fonts.py  test_pptx_shapes.py  test_pptx_tables.py  test_pptx_text.py  test_pptx_utils.py  test_render_pdf_images.py  test_validate_deck.py  test_validate_slides.py
.github/workflows/: create-stale-docs-issues.yml  dependency-review.yml  extension-marketplace-publish.yml  extension-package.yml  pip-audit.yml  pr-validation.yml  pytest-tests.yml  python-lint.yml  release-prerelease-pr.yml  (+2 more)
collections/: experimental.collection.md  experimental.collection.yml  hve-core-all.collection.yml  security.collection.yml
docs/: README.md
scripts/: README.md
(+77 files in other folders)
